--- a/css/components/_home.scss
+++ b/css/components/_home.scss
@@ -4,19 +4,20 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 6em 1em;
-  margin-top: 8em;
 
   li {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    opacity: 0;
     transform: translateY(0);
-    transition: transform 0.8s ease;
+    transition: transform 0.8s ease, opacity 0.8s ease;
 
     // Animate on scroll
     &.fade-in {
       transform: translateY(-80px);
+      opacity: 1;
     }
 
     .woocommerce-LoopProduct-link {
