--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -182,6 +182,10 @@ $biggerScreen2: 2559px;
         .woocommerce-MyAccount-content {
           padding: 0;
         }
+
+        .woocommerce-form-login {
+          width: 80vw;
+        }
       }
     }
 
@@ -371,6 +375,44 @@ $biggerScreen2: 2559px;
                 li {
                   a {
                     font-size: 1.2rem;
+                    text-decoration: none;
+                    font-weight: bold;
+                    position: relative;
+                    transition: color 0.4s ease;
+
+                    &:after {
+                      content: '';
+                      position: absolute;
+                      width: 0;
+                      height: 3px;
+                      display: block;
+                      margin-top: 6px;
+                      right: 0;
+                      background-color: whitesmoke;
+                      transition: width 0.4s ease;
+                      -webkit-transition: width 0.4s ease;
+                    }
+
+                    &:hover {
+                      color: whitesmoke;
+                    }
+
+                    &:hover:after {
+                      width: 100%;
+                      left: 0;
+                    }
+                  }
+
+                  &.current_page_item {
+                    a,
+                    span {
+                      color: whitesmoke;
+                    }
+
+                    a:after {
+                      width: 100%;
+                      left: 0;
+                    }
                   }
                 }
               }
@@ -509,6 +551,10 @@ $biggerScreen2: 2559px;
 
         .woocommerce-MyAccount-content {
           padding: 0 12em 0 0;
+        }
+
+        .woocommerce-form-login {
+          width: 50vw;
         }
       }
     }
