--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -1,17 +1,15 @@
 .site_header {
-  height: 4.5em;
+  height: fit-content;
   width: 100%;
   position: fixed;
   z-index: 2;
   top: 0;
-  transition: top 0.6s ease-in-out;
-
-  &.hide {
-    top: -200px;
-  }
 
   .header-wrapper {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .nav-container {
       .nav-menu-wrapper {
