--- a/css/components/_mobile-menu.scss
+++ b/css/components/_mobile-menu.scss
@@ -3,31 +3,111 @@
   box-shadow: 0 5px 5px -5px black;
 
   .header-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .login-search-wrapper {
+      position: absolute;
+      left: 1rem;
+      top: 0.8rem;
+      display: flex;
+      gap: 1em;
+
+      span {
+        font-size: 3rem;
+      }
+    }
+
     .logo {
       width: 8em;
-      position: absolute;
-      left: 8px;
-      top: 10px;
 
       img {
+        margin-top: 1em;
         width: 100%;
         height: auto;
+      }
+    }
+
+    .hamburger {
+      position: absolute;
+      top: 0.8rem;
+      right: 1rem;
+      z-index: 20;
+      width: 3em;
+      height: 3em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      rotate: 0deg;
+      transition: rotate 0.2s linear;
+
+      div {
+        position: absolute;
+        background-color: black;
+        border-radius: 5px;
+        width: 100%;
+        width: 80%;
+        height: 3px;
+        transition: opacity 0.2s linear;
+      }
+
+      &::before {
+        position: absolute;
+        content: '';
+        background-color: black;
+        border-radius: 5px;
+        width: 100%;
+        height: 3px;
+        transform: translateY(8px);
+        transition: transform 0.2s linear;
+      }
+
+      &::after {
+        position: absolute;
+        content: '';
+        background-color: black;
+        border-radius: 5px;
+        width: 100%;
+        height: 3px;
+        transform: translateY(-8px);
+        transition: transform 0.2s linear;
+      }
+
+      // Turns into X when clicked
+      &.active {
+        rotate: 180deg;
+
+        div {
+          opacity: 0;
+        }
+
+        &::before {
+          transform: rotate(45deg);
+        }
+
+        &:after {
+          transform: rotate(-45deg);
+        }
       }
     }
 
     .nav-container {
       .nav-menu-wrapper {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: rgb(228, 203, 177);
         position: fixed;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         top: 0;
         left: 0;
         transform: translateX(-100%);
-        transition: transform 0.4s ease-in-out;
+        transition: transform 0.4s ease;
 
         .menu-top-menu-container {
           ul {
@@ -37,8 +117,6 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
             gap: 18em;
 
             li {
@@ -74,74 +152,15 @@
             }
           }
         }
-      }
 
-      .dashicons-search {
-        position: absolute;
-        right: 65px;
-        top: 10px;
-        font-size: 2.8rem;
-      }
-
-      .hamburger {
-        position: absolute;
-        top: 8.5px;
-        right: 10px;
-        z-index: 20;
-        width: 3em;
-        height: 3em;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        rotate: 0deg;
-        transition: rotate 0.2s linear;
-
-        div {
+        .social-icons-nav {
+          display: flex;
+          gap: 2em;
           position: absolute;
-          background-color: black;
-          border-radius: 5px;
-          width: 100%;
-          height: 2px;
-          transition: opacity 0.2s linear;
-        }
+          bottom: 4rem;
 
-        &::before {
-          position: absolute;
-          content: '';
-          background-color: black;
-          border-radius: 5px;
-          width: 100%;
-          height: 2px;
-          transform: translateY(8px);
-          transition: transform 0.2s linear;
-        }
-
-        &::after {
-          position: absolute;
-          content: '';
-          background-color: black;
-          border-radius: 5px;
-          width: 100%;
-          height: 2px;
-          transform: translateY(-8px);
-          transition: transform 0.2s linear;
-        }
-
-        // Turns into X when clicked
-        &.active {
-          rotate: 180deg;
-
-          div {
-            opacity: 0;
-          }
-
-          &::before {
-            transform: rotate(45deg);
-          }
-
-          &:after {
-            transform: rotate(-45deg);
+          span {
+            font-size: 3rem;
           }
         }
       }
