--- a/css/style.css
+++ b/css/style.css
@@ -19,18 +19,18 @@ body.no-scroll {
   overflow: hidden;
 }
 body .site_header {
-  height: 4.5em;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 100%;
   position: fixed;
   z-index: 2;
   top: 0;
-  transition: top 0.6s ease-in-out;
-}
-body .site_header.hide {
-  top: -200px;
 }
 body .site_header .header-wrapper {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body .site_header .header-wrapper .nav-container .nav-menu-wrapper {
   display: flex;
@@ -56,8 +56,7 @@ body .content-area {
   background: linear-gradient(90deg, rgb(230, 204, 178) 0%, rgb(208, 200, 167) 100%);
 }
 body .content-area .site-main {
-  margin-top: 6em;
-  padding: 2em;
+  margin-top: 10em;
 }
 body .content-area .site-main .homepage-title {
   text-align: center;
@@ -263,6 +262,57 @@ body .content-area .site-main #content .page-content a {
 }
 body .content-area .site-main #content img {
   width: 55%;
+}
+body.page-id-68 {
+  background: linear-gradient(90deg, rgb(230, 204, 178) 0%, rgb(208, 200, 167) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+body.page-id-68 h1 {
+  text-align: center;
+  margin-top: 4em;
+  font-size: 3rem;
+}
+body.page-id-68 .contact-container {
+  width: 100%;
+  margin-top: 3em;
+  display: flex;
+  justify-content: space-between;
+  padding: 3em;
+}
+body.page-id-68 .contact-container .wpforms-container {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+body.page-id-68 .contact-container .wpforms-container form {
+  display: flex;
+  position: relative;
+}
+body.page-id-68 .contact-container .wpforms-container form #wpforms-field-email {
+  position: absolute;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4em;
+  padding: 0;
+  margin: 0;
+}
+body.page-id-68 .contact-container .wpforms-container form #wpforms-field-email input {
+  border: 1px solid red;
+}
+body.page-id-68 .contact-container .wpforms-container form .wpforms-submit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 8rem;
+  height: 4em;
+  padding: 0;
+  margin: 0;
 }
 body .woocommerce .woocommerce-notices-wrapper {
   display: none;
@@ -934,28 +984,98 @@ body .search-wrapper-hidden.show {
     background-color: #e7dfcc;
     box-shadow: 0 5px 5px -5px black;
   }
+  html .site_header .header-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  html .site_header .header-wrapper .login-search-wrapper {
+    position: absolute;
+    left: 1rem;
+    top: 0.8rem;
+    display: flex;
+    gap: 1em;
+  }
+  html .site_header .header-wrapper .login-search-wrapper span {
+    font-size: 3rem;
+  }
   html .site_header .header-wrapper .logo {
     width: 8em;
-    position: absolute;
-    left: 8px;
-    top: 10px;
   }
   html .site_header .header-wrapper .logo img {
+    margin-top: 1em;
     width: 100%;
     height: auto;
   }
+  html .site_header .header-wrapper .hamburger {
+    position: absolute;
+    top: 0.8rem;
+    right: 1rem;
+    z-index: 20;
+    width: 3em;
+    height: 3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    rotate: 0deg;
+    transition: rotate 0.2s linear;
+  }
+  html .site_header .header-wrapper .hamburger div {
+    position: absolute;
+    background-color: black;
+    border-radius: 5px;
+    width: 100%;
+    width: 80%;
+    height: 3px;
+    transition: opacity 0.2s linear;
+  }
+  html .site_header .header-wrapper .hamburger::before {
+    position: absolute;
+    content: "";
+    background-color: black;
+    border-radius: 5px;
+    width: 100%;
+    height: 3px;
+    transform: translateY(8px);
+    transition: transform 0.2s linear;
+  }
+  html .site_header .header-wrapper .hamburger::after {
+    position: absolute;
+    content: "";
+    background-color: black;
+    border-radius: 5px;
+    width: 100%;
+    height: 3px;
+    transform: translateY(-8px);
+    transition: transform 0.2s linear;
+  }
+  html .site_header .header-wrapper .hamburger.active {
+    rotate: 180deg;
+  }
+  html .site_header .header-wrapper .hamburger.active div {
+    opacity: 0;
+  }
+  html .site_header .header-wrapper .hamburger.active::before {
+    transform: rotate(45deg);
+  }
+  html .site_header .header-wrapper .hamburger.active:after {
+    transform: rotate(-45deg);
+  }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgb(228, 203, 177);
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     top: 0;
     left: 0;
     transform: translateX(-100%);
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.4s ease;
   }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
     padding: 0;
@@ -964,8 +1084,6 @@ body .search-wrapper-hidden.show {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 18em;
   }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li {
@@ -991,65 +1109,14 @@ body .search-wrapper-hidden.show {
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper.open ul li:nth-child(3) {
     transition-delay: 200ms;
   }
-  html .site_header .header-wrapper .nav-container .dashicons-search {
-    position: absolute;
-    right: 65px;
-    top: 10px;
-    font-size: 2.8rem;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger {
-    position: absolute;
-    top: 8.5px;
-    right: 10px;
-    z-index: 20;
-    width: 3em;
-    height: 3em;
+  html .site_header .header-wrapper .nav-container .nav-menu-wrapper .social-icons-nav {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    rotate: 0deg;
-    transition: rotate 0.2s linear;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger div {
+    gap: 2em;
     position: absolute;
-    background-color: black;
-    border-radius: 5px;
-    width: 100%;
-    height: 2px;
-    transition: opacity 0.2s linear;
+    bottom: 4rem;
   }
-  html .site_header .header-wrapper .nav-container .hamburger::before {
-    position: absolute;
-    content: "";
-    background-color: black;
-    border-radius: 5px;
-    width: 100%;
-    height: 2px;
-    transform: translateY(8px);
-    transition: transform 0.2s linear;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger::after {
-    position: absolute;
-    content: "";
-    background-color: black;
-    border-radius: 5px;
-    width: 100%;
-    height: 2px;
-    transform: translateY(-8px);
-    transition: transform 0.2s linear;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger.active {
-    rotate: 180deg;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger.active div {
-    opacity: 0;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger.active::before {
-    transform: rotate(45deg);
-  }
-  html .site_header .header-wrapper .nav-container .hamburger.active:after {
-    transform: rotate(-45deg);
+  html .site_header .header-wrapper .nav-container .nav-menu-wrapper .social-icons-nav span {
+    font-size: 3rem;
   }
   html .content-area {
     /* Home page products */
@@ -1205,14 +1272,6 @@ body .search-wrapper-hidden.show {
   html {
     font-size: 90%;
   }
-  html .site_header .header-wrapper .nav-container .dashicons-search {
-    right: 100px;
-    top: 12px;
-  }
-  html .site_header .header-wrapper .nav-container .hamburger {
-    right: 15px;
-    top: 10px;
-  }
   html .content-area .products li img {
     width: 30em;
     height: 30em;
@@ -1255,32 +1314,36 @@ body .search-wrapper-hidden.show {
   html .site_header {
     box-shadow: none;
     background-color: transparent;
+    transition: top 0.6s ease, background-color 0.6s ease, box-shadow 0.6s ease;
+  }
+  html .site_header.hide {
+    top: -200px;
+  }
+  html .site_header.show {
+    background-color: #e7dfcc;
+    box-shadow: 0 5px 5px -5px black;
   }
   html .site_header .header-wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 0.5em;
+    position: relative;
+  }
+  html .site_header .header-wrapper .hamburger {
+    display: none;
   }
   html .site_header .header-wrapper .logo {
-    position: relative;
-    top: 10px;
-    left: 18px;
-  }
-  html .site_header .header-wrapper .nav-container {
-    display: flex;
-    justify-content: center;
+    width: 12em;
   }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper {
-    background-color: initial;
-    position: relative;
-    left: 200px;
+    background-color: transparent;
+    position: absolute;
+    left: 100%;
+    top: 1rem;
+    top: 30%;
     height: auto;
-    width: -moz-fit-content;
-    width: fit-content;
+    width: auto;
   }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
     flex-direction: row;
-    gap: 7em;
+    gap: 6em;
   }
   html .site_header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li a {
     font-size: 1.2rem;
@@ -1316,14 +1379,23 @@ body .search-wrapper-hidden.show {
     width: 100%;
     left: 0;
   }
-  html .site_header .header-wrapper .nav-container .hamburger {
+  html .site_header .header-wrapper .nav-container .nav-menu-wrapper .social-icons-nav {
     display: none;
   }
-  html .site_header .header-wrapper .nav-container .dashicons-search {
-    position: relative;
-    right: 100px;
-    top: 18px;
-    font-size: 1.5rem;
+  html .site_header .header-wrapper .login-search-wrapper {
+    gap: 1em;
+    top: 1.5rem;
+  }
+  html .site_header .header-wrapper .login-search-wrapper span {
+    font-size: 2rem;
+  }
+  html .site_header .header-wrapper .login-search-wrapper .dashicons-search {
+    transform: scale(1);
+    transition: transform 0.4s ease;
+  }
+  html .site_header .header-wrapper .login-search-wrapper .dashicons-search:hover {
+    cursor: pointer;
+    transform: scale(1.05);
   }
   html .content-area .products {
     gap: 6em;
@@ -1404,37 +1476,5 @@ body .search-wrapper-hidden.show {
   }
   html .search-wrapper-hidden .search-input-field .close-icon {
     right: -5px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  html .site_header .header-wrapper .logo {
-    left: 25px;
-    top: 12px;
-  }
-  html .content-area .product .entry-summary {
-    gap: 3em;
-  }
-  html .woocommerce .checkout #order_review .woocommerce-checkout-payment .place-order button {
-    font-size: initial;
-  }
-  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    left: 40px;
-  }
-}
-@media screen and (min-width: 2074px) {
-  html {
-    font-size: 120%;
-  }
-  html .site_header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
-    gap: 8em;
-  }
-  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    left: 70px;
-    top: 25px;
-  }
-}
-@media screen and (min-width: 2559px) {
-  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    left: 100px;
   }
 }/*# sourceMappingURL=style.css.map */
